tests/invalid/macro_param_missing.c
#define F(x
int main() { return 0; }
